Get simulator.cpp to compile and run, initial hex file parsing

--- a/include/unity/todo.txt
+++ b/include/unity/todo.txt
@@ -1,6 +1,7 @@
-Split Buffer and CharacterSource out of string.h
-
-Fix the initSimpleData() interface between CharacterSource and HexadecimalStringImplementation
+String::codePoint()
+  10 -> "new line"
+  32 -> "space"
+String::decimal()
 
 Some kind of class to hold all the static Strings and avoid duplication between their different instances?
 
@@ -21,3 +22,8 @@ Improve the path parsing error messages
 
 On Windows, use GetCommandLineW() to retrieve command line
 
+When parsing paths, should we use:
+  getCodePoint() so that Unix paths can contain 0x0a and 0x0d bytes? or
+  get() so that error messages contain the correct line and column number?
+
+We should be using substitution into templates instead of concatenation for globalization purposes.
