--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,15 +1,26 @@
-Debug crash
-Suppress instruction output
-Make sure we don't have unbounded mutual recursion
-  Never simulate more than a cycle past requested time?
-Take into account reading and writing on the same cycle (read at start of Q2, write at end of Q4).
+test current system
+Simplify root.asm
+  Get rid of initial write
+  Flatten
 
-test that a single bar works how we expect when we prime and request data repeatedly
 benchmark
-Write a "simulate up to time t" routine
 add multiple bars all running at exactly 4MHz and check that we get the right stream back
 vary the clock speed according to a normal distribution - gradually increase the standard deviation and see when it breaks
 randomly add and remove bars as we're running
-Simulate clock drift, jitter, output settling time
-To avoid unbounded time, set root's t=0 and adjust all t when we're done with root.
+  Remove a random bar
+    Pick a bar at random
+    Figure out if it's a leaf
+    Disconnect it
+    Remove it
+  Add a random bar
+    Pick a bar at random
+    Pick a port at random - see if it's already connected
+    Create a new bar
+    Pick a random port of the correct gender
+    Connect it
 
+Simulate clock drift, jitter, output settling time
+
+Performance
+  Add a "care bits" mask to readMemory() and avoid reading bits we don't need. Use in BTFSC and BTFSS.
+  Add an output buffer and only call maleWrite()/femaleWrite() on bits that change.
