--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,4 +1,11 @@
 randomly add and remove bars as we're running
+  Fixed number of bars (say 100)
+  At random times, add or remove a bar
+    Pick a number from 0 to 99. If it's less than the number of bars in the tree, make a connection at random. Otherwise, break a connection at random.
+  Write code to interpret and analyze the bit string and compare it to the interval tree.
+
+
+
   Remove a random bar
     Pick a bar at random
     Figure out if it's a leaf
@@ -13,6 +20,7 @@ randomly add and remove bars as we're running
 vary the clock speed according to a normal distribution - gradually increase the standard deviation and see when it breaks
   Are the clock speeds of real PIC12F508s normal or uniform?
     Write code for the programmer code and speed tester (ideal speed should be 1/3 MHz)
+  Might need to rearrange simulateCycle() as simulateToTime()
 
 Simulate clock drift, jitter, output settling time
 
