--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,3 +1,8 @@
+Figure out why we're getting bad streams
+  There was a stream start right after the connect - maybe bar 3 isn't ready yet. Allow two bad streams after a change?
+
+To aid debugging, write a short note for each instructions and put these notes in the dump (instead of the instructions?)
+
 vary the clock speed according to a normal distribution - gradually increase the standard deviation and see when it breaks
   Are the clock speeds of real PIC12F508s normal or uniform?
     Write code for the programmer code and speed tester (ideal speed should be 1/3 MHz)
