--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,6 +1,5 @@
-Is it possible to confuse "prime pending" with "data"? If so:
-  Check that prime is low ~40 cycles after initial low detected - that should be high for data
-  Make sure "prime pending" is twice as long as data stream (~80 cycles)
+Need a way to figure out what's going wrong
+  Add marks to annotation (write for "TRIS GPIO")
 
 Make simulator.cpp output diagrams like timings.txt
 
