--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,23 +1,7 @@
-Investigate glitching states some more?
-  Make a one-line per cycle timing display
-    100x256 array of counts of:
-      (local) cycles since last sync
-      bar number
-    Sync happens when child set to R.
-    Bar becomes active when parent set to 0.
-    Output when we reset timers
-  The sync pulses seem to be "bunching" - getting closer and closer together as we go further into the graph?
-  Have the root back off the pulse rate on bad
-
-Programmer returning error on end-of-file line
-  Re-test with error codes
-
-Programmer not putting things in the right places?
-  Do an 'L' with the new programmer with preloaded waveform.hex
+Fix "tardy sync chain" problem if possible
+  Build and run
 
 Build first interval bar - octave
-  Break off first piece of PCB
-  Break off 164.5mm x 28m piece of PCB
   Fix up PCB layout
   Print PCB layout
   Iron onto board
