--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,26 +1,18 @@
-Build first interval bar - octave
-  Fix up PCB layout
-  Print PCB layout
-  Iron onto board
-  Touch up
-  Etch
-  Clean
-  Drill
-  Solder jumpers and programming wires (temporarily)
-  Solder PIC
+Programmer
+  Write back backup OSCCAL to PIC (0xC24)
 
-Build programmer
-  13V supply and switch
-
-Test programmer
-
-Run speed test
-  Try varying the OSCCAL value and see what happens to the speed
+  Write code to automatically test speed:
+    Put waveform code in buffer
+    Loop
+      Run timing for 10 cycles
+      Compute mean and std dev
+      Output over serial: OSCCAL value, Hertz value, Hertz std dev
+        000 0987654 +/-
+        f = 65536000000 / t     delta t of 1 cycle gives delta f of 65536000000/65535 ~= 15 Hz
 
 Buy connectors and resistors
 
 When the hardware doesn't work:
-  Check that MOVWF OSCCAL works correctly when it isn't the first (second) instruction executed
   Get something simpler working
   Run timing tests (make sure MOVWF PCL takes one cycle)
 
