--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,22 +1,12 @@
 Stall in configuration 774430 - a "wait for sync" loop.
   How could this happen? We can't change more than one connection whilst there is a prime pending as it won't have settled.
-    Examine 774420+ dump.
-
-Can we eliminate all settling problems by powering off entire chain between streams?
-  Do some tests to figure out:
-    How long power needs to be low for a reset
-    How long it takes to power up after a reset
-    Both O(30ms)?
-  If powering off each cycle is not feasable, power off if it's clearly stalled:
-    Can figure out number of bars by looking at time taken to prime, power off if we get more bytes than this
-    Power off if it's taken more streams to settle than there are bars
-  If powering off after each cycle is feasable, can get rid of prime waiting period and make things much faster
+    Examine 774420+ debug dump.
+    Data/prime deconfusion not working?
 
 Programmer
   Programming is rather slow
     Use calibration code to test speed of delay loops
   Write back backup OSCCAL to PIC (0xC24)
-
 
 Buy connectors and resistors
 
