--- a/intervals/todo.txt
+++ b/intervals/todo.txt
@@ -1,7 +1,9 @@
 Stall in configuration 774430 - a "wait for sync" loop.
-  How could this happen? We can't change more than one connection whilst there is a prime pending as it won't have settled.
-    Examine 774420+ debug dump.
-    Data/prime deconfusion not working?
+  Make prime signal less confusable:
+    Fix up intervals.annotation
+    Fix up root.asm
+    Fix up root.annotation
+  Test
 
 Programmer
   Programming is rather slow
